# llm-practice

./: .gitignore  README.md  archive.py  build-faiss.py  large-build-faiss.py  llm.py  pyproject.toml
