[project]
name = "llm-local"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.11.0",
    "google-generativeai>=0.8.5",
    "pandas>=2.3.0",
    "pillow>=11.3.0",
    "pymupdf>=1.26.3",
    "python-docx>=1.2.0",
    "sentence-transformers>=5.0.0",
]
